Implemented `dl_loader_plugin`

--- a/demo/loader_plugin/CMakeLists.txt
+++ b/demo/loader_plugin/CMakeLists.txt
@@ -4,7 +4,11 @@
 # This file is part of [modulus2-lib](https://github.com/semenovf/modulus2-lib) library.
 #
 # Changelog:
-#      2021.06.18 Initial version.
+#      2021.07.10 Initial version.
 ################################################################################
-add_subdirectory(quit_plugin)
-add_subdirectory(loader_plugin)
+project(loader_plugin)
+
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus2)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
