--- a/demo/loader_plugin/CMakeLists.txt
+++ b/demo/loader_plugin/CMakeLists.txt
@@ -12,3 +12,10 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus2)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
+add_library(m1 SHARED m1.cpp)
+add_library(m2 SHARED m2.cpp)
+
+target_link_libraries(m1 PRIVATE pfs::modulus2)
+target_link_libraries(m2 PRIVATE pfs::modulus2)
+target_include_directories(m1 PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(m2 PRIVATE ${CMAKE_SOURCE_DIR}/include)
