--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,12 @@
 #      2021.06.18 Added 'demo' subdirectory
 ################################################################################
 cmake_minimum_required (VERSION 3.5)
-project(modulus2-lib-ALL CXX C)
+
+project(modulus2-lib-ALL CXX)
 
 option(BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
-option(BUILD_TESTS "Build tests" OFF)
-option(BUILD_DEMO "Build examples/demo" OFF)
+option(BUILD_TESTS "Build tests" ON)
+option(BUILD_DEMO "Build examples/demo" ON)
 option(ENABLE_COVERAGE "Build tests with coverage support" OFF)
 
 message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
@@ -26,11 +27,11 @@ endif()
 include(${CMAKE_CURRENT_LIST_DIR}/3rdparty/pfs/common/library.cmake)
 include(${CMAKE_CURRENT_LIST_DIR}/library.cmake)
 
-if (BUILD_TESTS)
+if (BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
     enable_testing()
     add_subdirectory(tests)
 endif()
 
-if (BUILD_DEMO)
+if (BUILD_DEMO AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/demo)
     add_subdirectory(demo)
 endif()
