Use `portable-target` for build scripts.

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,7 @@
 	path = 3rdparty/spdlog
 	url = https://github.com/gabime/spdlog.git
 	branch = v1.x
+[submodule "3rdparty/portable-target"]
+	path = 3rdparty/portable-target
+	url = git@github.com:semenovf/portable-target.git
+	branch = master
