--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,22 @@
 # This file is part of [modulus2-lib](https://github.com/semenovf/modulus2-lib) library.
 #
 # Changelog:
-#      2021.05.20 Initial version
-#      2021.06.18 Added 'demo' subdirectory
+#      2021.05.20 Initial version.
+#      2021.06.18 Added 'demo' subdirectory.
 ################################################################################
-cmake_minimum_required (VERSION 3.5)
-
+cmake_minimum_required (VERSION 3.11)
 project(modulus2-lib-ALL CXX)
 
 option(PFS_MODULUS2__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
 option(PFS_MODULUS2__BUILD_TESTS "Build tests" OFF)
 option(PFS_MODULUS2__BUILD_DEMO "Build examples/demo" OFF)
 option(PFS_MODULUS2__ENABLE_COVERAGE "Build tests with coverage support" OFF)
+
+if (NOT PORTABLE_TARGET__ENABLED)
+    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/3rdparty/portable-target/cmake/v2)
+    include(PortableTarget)
+    portable_target(SET ENABLE_TRACE ON)
+endif()
 
 message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
 message(STATUS "C++ compiler version: ${CMAKE_CXX_COMPILER_VERSION}")
