fix: Fixed build scripts.

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = 3rdparty/portable-target
 	url = git@github.com:semenovf/portable-target.git
 	branch = master
+[submodule "3rdparty/pfs/debby"]
+	path = 3rdparty/pfs/debby
+	url = git@github.com:semenovf/debby-lib.git
