fix: Fixed `rocksdb_settings_plugin` (based on `debby-lib` now).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,49 +1,23 @@
 ################################################################################
-# Copyright (c) 2019,2020 Vladislav Trifochkin
+# Copyright (c) 2021 Vladislav Trifochkin
 #
-# This file is part of [pfs-common](https://github.com/semenovf/pfs-common) library.
+# This file is part of `modulus2-lib` library.
+#
+# Changelog:
+#      2021.05.20 Initial version.
+#      2021.12.21 Refactored for using portable_target `ADD_TEST`.
 ################################################################################
 project(modulus2-lib-TESTS CXX C)
 
-if (PFS_MODULUS2__ENABLE_COVERAGE)
-    message(STATUS "Coverage feature enabled")
 
-    if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-        message(FATAL_ERROR "Coverage feature requires GCC")
-    endif()
-
-    set(CMAKE_CXX_FLAGS "-g -O0 --coverage")
-    set(CMAKE_C_FLAGS "-g -O0 --coverage")
-endif()
-
-set(TEST_NAMES
-    modulus2
-    mangling
+list(APPEND TESTS
+#     modulus2
+#     mangling
     settings_plugin)
 
-foreach (name ${TEST_NAMES})
-    if (${name}_SOURCES)
-        add_executable(${name} ${${name}_SOURCES} ${name}.cpp)
-    else ()
-        add_executable(${name} ${name}.cpp)
-    endif()
-
-    # https://gcc.gnu.org/onlinedocs/gcc/Instrumentation-Options.html#Instrumentation-Options
-    #
-    # --coverage
-    #       This option is used to compile and link code instrumented for
-    #       coverage analysis. The option is a synonym for -fprofile-arcs
-    #       -ftest-coverage (when compiling) and -lgcov (when linking).
-    if (PFS_MODULUS2__ENABLE_COVERAGE)
-        target_compile_options(${name} PRIVATE -g -O0 --coverage)
-        target_link_libraries(${name} PRIVATE -g -O0 --coverage)
-    endif()
-
-    target_link_libraries(${name} PRIVATE pfs::modulus2)
-    add_test(NAME ${name} COMMAND ${name})
+foreach (t ${TESTS})
+    portable_target(ADD_TEST ${t}
+        ENABLE_COVERAGE ${DEBBY__ENABLE_COVERAGE}
+        SOURCES ${t}.cpp ${${t}_SOURCES}
+        LINK pfs::modulus2)
 endforeach()
-
-if (PFS_MODULUS2__ENABLE_COVERAGE)
-    include(${CMAKE_SOURCE_DIR}/cmake/Coverage.cmake)
-    coverage_target("'/usr/*';'*/doctest.h'")
-endif()
