fix: Fixed `dl_loader_plugin`

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -6,6 +6,6 @@
 # Changelog:
 #      2021.06.18 Initial version.
 ################################################################################
-# add_subdirectory(quit_plugin)
-# add_subdirectory(loader_plugin)
-# add_subdirectory(spdlog_logger)
+add_subdirectory(quit_plugin)
+add_subdirectory(loader_plugin)
+add_subdirectory(spdlog_logger)
