feat: Added settings as template parameter for `modulus2`.
fix: Removed support for settings plugins.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ project(modulus2-TESTS CXX C)
 list(APPEND TESTS
     modulus2basic
     mangling
-    settings_plugin)
+    settings)
 
 foreach (t ${TESTS})
     portable_target(ADD_TEST ${t}
