--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ################################################################################
-# Copyright (c) 2021,2022 Vladislav Trifochkin
+# Copyright (c) 2021-2024 Vladislav Trifochkin
 #
 # This file is part of `modulus2-lib`.
 #
@@ -8,7 +8,7 @@
 #      2021.06.18 Added 'demo' subdirectory.
 ################################################################################
 cmake_minimum_required (VERSION 3.11)
-project(modulus2-ALL CXX)
+project(modulus2-ALL CXX C)
 
 option(MODULUS2__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
 option(MODULUS2__BUILD_TESTS "Build tests" OFF)
@@ -16,7 +16,7 @@ option(MODULUS2__BUILD_DEMO "Build examples/demo" OFF)
 option(MODULUS2__ENABLE_COVERAGE "Build tests with coverage support" OFF)
 
 if (NOT PORTABLE_TARGET__ENABLED)
-    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/3rdparty/portable-target/cmake/v2)
+    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/2ndparty/portable-target/cmake/v2)
     include(PortableTarget)
     portable_target(SET ENABLE_TRACE ON)
 endif()
@@ -29,7 +29,7 @@ if (MODULUS2__BUILD_STRICT)
     set(CMAKE_CXX_EXTENSIONS OFF) # use -std=c++XX rather than -std=gnu++XX
 endif()
 
-include(${CMAKE_CURRENT_LIST_DIR}/library.cmake)
+portable_target(INCLUDE_PROJECT ${CMAKE_CURRENT_LIST_DIR}/library.cmake)
 
 if (MODULUS2__BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
     enable_testing()
