--- a/demo/loader_plugin/CMakeLists.txt
+++ b/demo/loader_plugin/CMakeLists.txt
@@ -12,10 +12,10 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus2)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
-add_library(m1 SHARED m1.cpp)
-add_library(m2 SHARED m2.cpp)
-add_library(m3 SHARED m3.cpp)
-add_library(m4 SHARED m4.cpp)
+add_library(m1 MODULE m1.cpp)
+add_library(m2 MODULE m2.cpp)
+add_library(m3 MODULE m3.cpp)
+add_library(m4 MODULE m4.cpp)
 
 target_link_libraries(m1 PRIVATE pfs::modulus2)
 target_link_libraries(m2 PRIVATE pfs::modulus2)
