--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,22 +1,22 @@
 ################################################################################
-# Copyright (c) 2021 Vladislav Trifochkin
+# Copyright (c) 2021-2025 Vladislav Trifochkin
 #
 # This file is part of `modulus2-lib` library.
 #
 # Changelog:
-#      2021.05.20 Initial version.
-#      2021.12.21 Refactored for using portable_target `ADD_TEST`.
+#       2021.05.20 Initial version.
+#       2021.12.21 Refactored for using portable_target `ADD_TEST`.
+#       2025.02.18 Removed `portable_target` dependency.
 ################################################################################
 project(modulus2-TESTS CXX C)
 
-list(APPEND TESTS
+set(TESTS
     modulus2basic
     mangling
     settings)
 
-foreach (t ${TESTS})
-    portable_target(ADD_TEST ${t}
-        ENABLE_COVERAGE ${DEBBY__ENABLE_COVERAGE}
-        SOURCES ${t}.cpp ${${t}_SOURCES}
-        LINK pfs::modulus2)
+foreach (target ${TESTS})
+    add_executable(${target} ${target}.cpp)
+    target_link_libraries(${target} PRIVATE pfs::modulus2)
+    add_test(NAME ${target} COMMAND ${target})
 endforeach()
