--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,11 @@ project(modulus2-ALL CXX C)
 option(MODULUS2__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
 option(MODULUS2__BUILD_TESTS "Build tests" OFF)
 option(MODULUS2__BUILD_DEMO "Build examples/demo" OFF)
+option(MODULUS2__DISABLE_FETCH_CONTENT "Disable fetch content if sources of dependencies already exists in the working tree (checks .git subdirectory)" ON)
+option(MODULUS2__ENABLE_SPDLOG "Enable `spdlog` library for logger" OFF)
+option(MODULUS2__ENABLE_DEBBY "Enable `debby-lib` library for settings backends" ON)
 
-if (DEBBY__BUILD_STRICT)
+if (MODULUS2__BUILD_STRICT)
     if (NOT CMAKE_CXX_STANDARD)
         set(CMAKE_CXX_STANDARD 14)
     endif()
@@ -41,6 +44,8 @@ if (NOT _archive_output_directory)
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
 endif()
 
+add_subdirectory(3rdparty)
+add_subdirectory(2ndparty)
 include(${CMAKE_CURRENT_LIST_DIR}/library.cmake)
 
 if (MODULUS2__BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
