--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -21,8 +21,8 @@ if (MODULUS2__ENABLE_SPDLOG)
             include(FetchContent)
             FetchContent_Declare(spdlog
                 GIT_REPOSITORY https://github.com/gabime/spdlog.git
-                GIT_TAG v1.15.2
-                SOURCE_DIR ${CMAKE_SOURCE_DIR}/3rdparty/spdlog
+                GIT_TAG v1.15.3
+                SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/3rdparty/spdlog
                 SUBBUILD_DIR ${CMAKE_BINARY_DIR}/3rdparty/spdlog)
             FetchContent_MakeAvailable(spdlog)
             message(STATUS "Fetching spdlog complete")
