--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,18 @@
 #       2021.06.18 Added 'demo' subdirectory.
 #       2025.02.18 Up to C++14 standard.
 #                  Min CMake version is 3.19 (CMakePresets).
+#       2025.09.22 Version 3.0
 ################################################################################
 cmake_minimum_required (VERSION 3.19)
-project(modulus2-ALL CXX C)
+project(modulus-ALL CXX C)
 
-option(MODULUS2__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
-option(MODULUS2__BUILD_TESTS "Build tests" OFF)
-option(MODULUS2__BUILD_DEMO "Build examples/demo" OFF)
-option(MODULUS2__DISABLE_FETCH_CONTENT "Disable fetch content if sources of dependencies already exists in the working tree (checks .git subdirectory)" ON)
-option(MODULUS2__ENABLE_SPDLOG "Enable `spdlog` library for logger" OFF)
-option(MODULUS2__ENABLE_DEBBY "Enable `debby-lib` library for settings backends" ON)
+option(MODULUS__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
+option(MODULUS__BUILD_TESTS "Build tests" OFF)
+option(MODULUS__BUILD_DEMO "Build examples/demo" OFF)
+option(MODULUS__DISABLE_FETCH_CONTENT "Disable fetch content if sources of dependencies already exists in the working tree (checks .git subdirectory)" ON)
+option(MODULUS__ENABLE_DEBBY "Enable `debby-lib` library for settings backends" ON)
 
-if (MODULUS2__BUILD_STRICT)
+if (MODULUS__BUILD_STRICT)
     if (NOT CMAKE_CXX_STANDARD)
         set(CMAKE_CXX_STANDARD 14)
     endif()
@@ -28,38 +28,21 @@ if (MODULUS2__BUILD_STRICT)
     set(CMAKE_CXX_EXTENSIONS OFF) # use -std=c++XX rather than -std=gnu++XX
 endif()
 
-get_property(_runtime_output_directory GLOBAL PROPERTY RUNTIME_OUTPUT_DIRECTORY)
-get_property(_library_output_directory GLOBAL PROPERTY LIBRARY_OUTPUT_DIRECTORY)
-get_property(_archive_output_directory GLOBAL PROPERTY ARCHIVE_OUTPUT_DIRECTORY)
-
-if (NOT _runtime_output_directory)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
-endif()
-
-if (NOT _library_output_directory)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
-endif()
-
-if (NOT _archive_output_directory)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
-endif()
-
-add_subdirectory(2ndparty) # Need before 3rdparty to share fmt library for spdlog
-add_subdirectory(3rdparty)
+add_subdirectory(2ndparty)
 include(${CMAKE_CURRENT_LIST_DIR}/library.cmake)
 
-if (MODULUS2__BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
+if (MODULUS__BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
     enable_testing()
     add_subdirectory(tests)
 endif()
 
-if (MODULUS2__BUILD_DEMO AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/demo)
+if (MODULUS__BUILD_DEMO AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/demo)
     add_subdirectory(demo)
 endif()
 
 include(GNUInstallDirs)
 
-install(TARGETS modulus2
+install(TARGETS modulus
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
