--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,15 +8,15 @@
 #       2021.12.21 Refactored for using portable_target `ADD_TEST`.
 #       2025.02.18 Removed `portable_target` dependency.
 ################################################################################
-project(modulus2-TESTS CXX C)
+project(modulus-TESTS CXX C)
 
 set(TESTS
-    modulus2basic
+    modulus_basic
     mangling
     settings)
 
 foreach (target ${TESTS})
     add_executable(${target} ${target}.cpp)
-    target_link_libraries(${target} PRIVATE pfs::modulus2)
+    target_link_libraries(${target} PRIVATE pfs::modulus)
     add_test(NAME ${target} COMMAND ${target})
 endforeach()
