--- a/demo/loader_plugin/CMakeLists.txt
+++ b/demo/loader_plugin/CMakeLists.txt
@@ -1,5 +1,5 @@
 ################################################################################
-# Copyright (c) 2021,2022 Vladislav Trifochkin
+# Copyright (c) 2021-2025 Vladislav Trifochkin
 #
 # This file is part of `modulus2-lib`.
 #
@@ -9,7 +9,7 @@
 project(loader_plugin)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus2)
+target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 add_library(m1 MODULE m1.cpp)
@@ -17,10 +17,10 @@ add_library(m2 MODULE m2.cpp)
 add_library(m3 MODULE m3.cpp)
 add_library(m4 MODULE m4.cpp)
 
-target_link_libraries(m1 PRIVATE pfs::modulus2)
-target_link_libraries(m2 PRIVATE pfs::modulus2)
-target_link_libraries(m3 PRIVATE pfs::modulus2)
-target_link_libraries(m4 PRIVATE pfs::modulus2)
+target_link_libraries(m1 PRIVATE pfs::modulus)
+target_link_libraries(m2 PRIVATE pfs::modulus)
+target_link_libraries(m3 PRIVATE pfs::modulus)
+target_link_libraries(m4 PRIVATE pfs::modulus)
 target_include_directories(m1 PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(m2 PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(m3 PRIVATE ${CMAKE_SOURCE_DIR}/include)
