--- a/demo/quit_plugin/CMakeLists.txt
+++ b/demo/quit_plugin/CMakeLists.txt
@@ -9,6 +9,6 @@
 project(quit_plugin)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus2)
+target_link_libraries(${PROJECT_NAME} PRIVATE pfs::modulus)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
